--- a/NumberGuessing/NumberGuessing/angular.json
+++ b/NumberGuessing/NumberGuessing/angular.json
@@ -67,7 +67,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "NumberGuessing:build"
+            "browserTarget": "NumberGuessing:build",
+            "port": 5580
           },
           "configurations": {
             "production": {
